--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        ./test.sh
+        ./coverage.sh
 
     - name: Lint with pylint
       run: |
