--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,7 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip setuptools wheel
-        python3 -m pip install -r requirements/test_requirements.txt
+        python3 -m pip install -r requirements/requirements.txt \
+                               -r requirements/test_requirements.txt
 
     - name: Test with pytest
       run: |
